--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -7,7 +7,7 @@
 	    		<div class="col-sm-6">
 	        		<div class="panel panel-default">
 	            		<div class="panel-heading">
-	                		Map
+	                		Map {{ location.address }}
 	            		</div>
 	            		<div class="panel-body">
 		                	<div id="map-canvas" style="height: 400px; margin: 0; padding: 0;"></div>
